# spectrum2spec

./: .gitignore  .pre-commit-config.yaml  README.md  generate_yaml_spec.py  pyproject.toml  spectrum.example.yaml  spectrum.py
